--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ CONTRACT_ADDRESS = 0xff50ed3d0ec03ac01d4c79aad74928bff48a7b2b
 INFURA_HTTPS_ENDPOINT= https://goerli.infura.io/v3/1cc5a78e2e72446880dee3ff4b82cae1
 
 # Full path to nonce file location (file does not need to exist, but folder does)
-NONCE_FILE= "../nonceFolder/noncefile.txt"
+NONCE_FILE= ../nonceFolder/noncefile.txt
 
 ETHERSCAN_API_KEY = Y9Y41PJZ7KUJP3SVPZRZ29T99QEAJ434KZ
 ETHERSCAN_API_URL = https://api.etherscan.io/api
