--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Rename this file to .env and fill out the below
 
 # See README.md for more info
-DISCORD_BOT_TOKEN= ODkyNzUxNjYzNTQ5NTE3ODY0.YVRdxw.FcBg0q_4DV-TRWXM5784i0rGub8
+DISCORD_BOT_TOKEN= OTI4NTkxODQwNzc5ODQ1Njgy.YdbAiw.gJhrixaFWfx7rg2ZRJC8GpI2eyc
 
 # The address and private key of the wallet holding the goerli eth you will distribute
 FAUCET_ADDRESS= 0xb58C4A07278E812c963DEe73D82E7fA4011B2327
